# Aegis-75

./: .env.example  .env.zeabur.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.python  Dockerfile.rust  PlanLevel4.2_20260328.txt  PlanLevel_20260327.txt  README.md  README_COMPOSE.md  docker-compose.yml
.zeabur/: nodes.example.csv  template.yaml
python/: main.py
python/data/: trading_pairs.json
python/data/wallets/: mosguo.wallet.json
python/frontend/components/: Dashboard.jsx  TradingPairTable.jsx  WalletCard.jsx
python/routes/: dashboard_api.py
python/services/: api_errors.py  arbitrage_candidate_service.py  arbitrage_engine.py  exchange_executor.py  order_routing_service.py  pair_registry_cache.py  pair_registry_service.py  pair_registry_updater.py  trading_pair_service.py  wallet_service.py
python/static/: dashboard.html
python/static/dashboard/: index.html
scripts/: run-local.sh
src/: main.rs
src/arbitrage/: mod.rs
src/control/: mod.rs  zeroclaw.rs
src/core/: app.rs  config.rs
src/dashboard/: mod.rs  pair_config.rs  service.rs  view.rs
src/dex/: router.rs
src/execution/: router.rs
src/http/: routes.rs
src/market/: cache.rs  mod.rs  price.rs  types.rs
src/types/: alerts.rs  mod.rs  orders.rs
