[package]
name = "aegis-75"
version = "0.1.0"
edition = "2021"
description = "Aegis-75 control-plane and execution-plane runtime for Zeabur"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
